--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,8 @@ jobs:
         run: go mod verify
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v8
-        with:
-          version: v2.1.6
+        uses: golangci/go        uses: golangci/golangci-lint-action@v8
+rsion: v2.1.6
           args: --timeout=5m
 
   test:
@@ -41,12 +40,11 @@ jobs:
           go-version: '1.21'
 
       - name: Test
-        run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
-
-      - name: Upload coverage to Codecov
+        run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
-          file: ./coverage.txt
+          files: ./coverage.txt
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
 
   build:
