--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,9 @@ jobs:
         run: go mod verify
 
       - name: Run golangci-lint
-        uses: golangci/go        uses: golangci/golangci-lint-action@v8
-rsion: v2.1.6
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.1.6
           args: --timeout=5m
 
   test:
