--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,9 @@ jobs:
           go-version: '1.21'
 
       - name: Test
-        run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...      - name: Upload coverage to Codecov
+        run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+        
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
           files: ./coverage.txt
