we don't need to fail CI if codecove errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,8 @@ jobs:
         with:
           files: ./coverage.txt
           token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
+          slug: dBitech/go-apiTemplate
+          fail_ci_if_error: false
 
   build:
     name: Build
